--- a/tournament-web-app/src/app/evaluationgrade/evaluationgrade-component.html
+++ b/tournament-web-app/src/app/evaluationgrade/evaluationgrade-component.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         @if( performance ){
-            <button mat-button-icon (click)="onSubmit()" [disabled]="performance.isReleased"><mat-icon>done</mat-icon></button>
+            <button mat-button-icon (click)="onSubmit()" ><mat-icon>done</mat-icon></button>
         }
         
     }
