--- a/tournament-web-app/src/app/tournament/tournament.component.html
+++ b/tournament-web-app/src/app/tournament/tournament.component.html
@@ -60,7 +60,7 @@
             }
             @if( tournamentId && tournament ){
 
-                @if( currentProfile == "participant" && !isParticipant){
+                @if( currentProfile == "participant" && !isParticipant && !isAdmin){
                     <span class="bar">
                         <span class="spacer"></span>
                         <button class="inscribe" mat-raised-button color="primary" (click)="onInscribe()">Inscribete</button>
