--- a/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
+++ b/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
@@ -3,7 +3,7 @@
         @for(j of getJurors();track j;){
             <mat-grid-list cols="4" rowHeight="3em">
             @if( !isAdmin ){
-                @for(r of getEvaluationRefence(e.id,j.id); track r;){
+                @for(r of getEvaluationRefence(e.id,j.email!); track r;){
                     <mat-grid-tile>{{e.label}}</mat-grid-tile>
                     <mat-grid-tile>{{j.label}}</mat-grid-tile>                
                     <mat-grid-tile>
@@ -18,7 +18,7 @@
                     </mat-grid-tile>
                     <mat-grid-tile>
                         @if( isAdmin && !performance.isReleased){
-                            <button mat-icon-button color="warn" (click)="onRemoveEvaluationGrade(e.id,j.id)"><mat-icon>delete</mat-icon></button>
+                            <button mat-icon-button color="warn" (click)="onRemoveEvaluationGrade(e.id,j.email!)"><mat-icon>delete</mat-icon></button>
                         }                    
                     </mat-grid-tile>
                 }
@@ -29,7 +29,7 @@
             @else{
                 <mat-grid-tile>{{e.label}}</mat-grid-tile>
                 <mat-grid-tile>{{j.label}}</mat-grid-tile>                   
-                @for(r of getEvaluationRefence(e.id,j.id); track r;){
+                @for(r of getEvaluationRefence(e.id,j.email!); track r;){
              
                     <mat-grid-tile>
                         @if( !r.evaluationGrade.isCompleted ){
@@ -44,7 +44,7 @@
                     </mat-grid-tile>
                     <mat-grid-tile>
                         @if( isAdmin && !performance.isReleased){
-                            <button mat-icon-button color="warn" (click)="onRemoveEvaluationGrade(e.id,j.id)"><mat-icon>delete</mat-icon></button>
+                            <button mat-icon-button color="warn" (click)="onRemoveEvaluationGrade(e.id,j.email!)"><mat-icon>delete</mat-icon></button>
                         }                    
                     </mat-grid-tile>
                 }
@@ -52,7 +52,7 @@
                     @if( !performance.isReleased ){
                         <mat-grid-tile>
                             @if( isAdmin ){
-                                <button mat-icon-button (click)="onAddEvaluationGrade(e.id,j.id)"><mat-icon>playlist_add</mat-icon></button>
+                                <button mat-icon-button (click)="onAddEvaluationGrade(e.id,j.email!)"><mat-icon>playlist_add</mat-icon></button>
                             }
                         </mat-grid-tile>
                         <mat-grid-tile>
