--- a/tournament-web-app/src/app/participant-welcome/participant-welcome.component.html
+++ b/tournament-web-app/src/app/participant-welcome/participant-welcome.component.html
@@ -1,4 +1,4 @@
-<p>participant-welcome works!</p>
+<p>Bienvenido participante</p>
 
 @if( currentProfile == "participant" && !isParticipant && !isAdmin && !isJuror){
     <span class="bar">
