--- a/tournament-web-app/src/app/tournament-search/tournament-search.component.html
+++ b/tournament-web-app/src/app/tournament-search/tournament-search.component.html
@@ -27,7 +27,7 @@
     <mat-card>
         <mat-card-header>
             <mat-card-title>
-                <a routerLink="/tournament/{{tournament.id}}">{{tournament.data().label}}</a>
+                <a routerLink="/participantTournament/{{tournament.id}}">{{tournament.data().label}}</a>
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
