--- a/tournament-web-app/src/app/category-list/category-list.component.html
+++ b/tournament-web-app/src/app/category-list/category-list.component.html
@@ -1,7 +1,7 @@
 <a [routerLink]="'/tournament/'+tournamentId">
     <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
 </a>
-<h1>Category
+<h1>Categorias
     @if( !isAdding && !editingId){
         <button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button>
     }</h1>
