--- a/tournament-web-app/src/app/participant-tournament/participant-tournament.component.html
+++ b/tournament-web-app/src/app/participant-tournament/participant-tournament.component.html
@@ -62,7 +62,8 @@
                         </mat-expansion-panel>
                     } 
                 </mat-accordion> 
-        </mat-expansion-panel>     
+        </mat-expansion-panel>  
+        @if( isParticipant ){   
         <mat-expansion-panel>
             <mat-expansion-panel-header>
                 <mat-panel-title>Performances</mat-panel-title>
@@ -81,7 +82,9 @@
                     </mat-list-item>
                 }                
             </mat-list>  
-        </mat-expansion-panel>  
+        </mat-expansion-panel>
+        } 
+        @if( tournament.isProgramReleased ){ 
         <mat-expansion-panel>
             <mat-expansion-panel-header>
                 <mat-panel-title>Programa</mat-panel-title>
@@ -96,7 +99,8 @@
                     <h3>No se han adicionado performances al programa</h3>
                 }                             
             </mat-list>  
-        </mat-expansion-panel>                               
+        </mat-expansion-panel>              
+        }                 
     </mat-accordion>    
     <p>
         <mat-divider></mat-divider>
