--- a/tournament-web-app/src/app/admin-welcome/admin-welcome.component.html
+++ b/tournament-web-app/src/app/admin-welcome/admin-welcome.component.html
@@ -12,7 +12,7 @@
             </mat-card-header>
             <mat-card-content>
                 <div class="bar">
-                    <div>fecha:{{tl.tournament.eventDate.toDate() | date: 'dd/MM/yyyy'}}</div>
+                    <div>fecha:{{ dateSrv.getDate(tl.tournament.eventDate) | date: 'dd/MM/yyyy'}}</div>
                     <span class="spacer"></span>
                     <img mat-card-sm-image [src]="tl.tournament.imageUrl" >  
                 </div>       
